# nanograd

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
examples/: _plot.py  cnn_digits.py  digits_classification.py  moons_classification.py  regression_sine.py  rnn_recall.py  sort_transformer.py  spiral_classification.py
nanograd/: __init__.py  _random.py  attention.py  conv.py  nn.py  optim.py  rnn.py  tensor.py  utils.py
tests/: _gradcheck.py  test_attention.py  test_conv.py  test_nn.py  test_optim.py  test_rnn.py  test_scheduler.py  test_tensor.py  test_training.py  test_utils.py
