[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "nanograd"
version = "0.2.0"
description = "A tiny reverse-mode autodiff engine and neural-network library, written from scratch in NumPy."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AlanoHater" }]
keywords = [
    "autodiff",
    "automatic-differentiation",
    "backpropagation",
    "deep-learning",
    "neural-network",
    "machine-learning",
    "numpy",
    "education",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
examples = ["matplotlib>=3.4", "scikit-learn>=1.0"]
dev = ["pytest>=7.0", "matplotlib>=3.4", "scikit-learn>=1.0"]

[project.urls]
Homepage = "https://github.com/AlanoHater/Nuevo-proyecto"
Repository = "https://github.com/AlanoHater/Nuevo-proyecto"

[tool.setuptools.packages.find]
include = ["nanograd*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
